<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:gravity="center"
    android:id="@+id/drawerLayout">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                android:background="@color/colorHome"
                app:layout_scrollFlags="enterAlways"
                android:transitionName="actionBar"
                app:popupTheme="?attr/popupTheme"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
        </android.support.design.widget.AppBarLayout>

        <qixiao.com.btdownload.customviews.EmptyRecyclerView
            android:id="@+id/torrent_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/app_bar"
            android:background="@color/colorGray2"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <include
            android:id="@+id/empty_view_torrent_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/BaseTheme.EmptyView"
            android:layout_gravity="center"
            layout="@layout/layout_none"/>

        <include
            android:id="@+id/rl_all_down"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/layout_speed_bottom"
            android:gravity="bottom"/>

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/add_torrent_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="-10dp"
            android:paddingBottom="10dp"
            android:layout_gravity="right|bottom"
            android:layout_marginBottom="@dimen/margin_20dp"
            android:scaleType="fitCenter"
            android:transitionName="fab"
            android:contentDescription="@string/add"
            app:layout_behavior="qixiao.com.btdownload.customviews.SnackBarBehavior"
            fab:menu_fab_size="normal"
            fab:menu_showShadow="true"
            fab:menu_shadowColor="@color/fab_menu_shadow"
            fab:menu_shadowRadius="2dp"
            fab:menu_shadowXOffset="1dp"
            fab:menu_shadowYOffset="1dp"
            fab:menu_colorNormal="@color/accent"
            fab:menu_colorPressed="@color/accent_dark"
            fab:menu_colorRipple="@color/accent_light"
            fab:menu_animationDelayPerItem="50"
            fab:menu_labels_padding="8dp"
            fab:menu_labels_textColor="@color/text_primary_inverse"
            fab:menu_labels_textSize="14sp"
            fab:menu_labels_cornerRadius="3dp"
            fab:menu_labels_colorNormal="@color/fab_menu_label_normal"
            app:menu_labels_colorPressed="@color/fab_menu_label_normal"
            app:menu_labels_colorRipple="@color/fab_menu_label_normal"
            fab:menu_labels_showShadow="true"
            fab:menu_labels_singleLine="false"
            fab:menu_labels_ellipsize="none"
            fab:menu_labels_maxLines="-1"
            fab:menu_labels_position="left"
            fab:menu_openDirection="up"
            fab:menu_backgroundColor="@android:color/transparent">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/add_link_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_link_white_18dp"
                app:fab_colorNormal="@color/accent"
                app:fab_colorPressed="@color/accent_dark"
                app:fab_colorRipple="@color/accent_light"
                fab:fab_size="mini"
                fab:fab_label="@string/add_link" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/open_file_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_file_white_18dp"
                app:fab_colorNormal="@color/accent"
                app:fab_colorPressed="@color/accent_dark"
                app:fab_colorRipple="@color/accent_light"
                fab:fab_size="mini"
                fab:fab_label="@string/open_file" />
        </com.github.clans.fab.FloatingActionMenu>
    </android.support.design.widget.CoordinatorLayout>

<!--侧滑菜单-->
    <LinearLayout
        android:id="@+id/ll_drawer"
        android:layout_width="@dimen/width_255dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorGray2"
        android:choiceMode="singleChoice"
        android:divider="@color/colorGray"
        android:dividerHeight="0dp"
        android:orientation="vertical"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_110dp"
            android:background="@drawable/home_page_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:text="@string/app_name"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_30sp" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/ll_all"
            style="@style/activity_main_ll"
            android:layout_marginTop="@dimen/margin_1dp">

            <ImageView
                android:id="@+id/iv_all"
                style="@style/activity_main_iv"
                android:background="@drawable/selector_all" />

            <TextView
                android:id="@+id/tv_all"
                style="@style/activity_main_tv"
                android:text="@string/main_tv1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_downloadering"
            style="@style/activity_main_ll"
            android:layout_marginTop="@dimen/margin_1dp">

            <ImageView
                android:id="@+id/iv_downloadering"
                style="@style/activity_main_iv"
                android:background="@drawable/selector_downloadering" />

            <TextView
                android:id="@+id/tv_downloadering"
                style="@style/activity_main_tv"
                android:text="@string/main_tv2" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_finshed"
            style="@style/activity_main_ll"
            android:layout_marginTop="@dimen/margin_1dp">

            <ImageView
                android:id="@+id/iv_finshed"
                style="@style/activity_main_iv"
                android:background="@drawable/selector_finshed" />

            <TextView
                android:id="@+id/tv_finshed"
                style="@style/activity_main_tv"
                android:text="@string/main_tv3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_paused"
            style="@style/activity_main_ll"
            android:layout_marginTop="@dimen/margin_1dp">

            <ImageView
                android:id="@+id/iv_paused"
                style="@style/activity_main_iv"
                android:background="@drawable/selector_paused" />

            <TextView
                android:id="@+id/tv_paused"
                style="@style/activity_main_tv"
                android:text="@string/main_tv4" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_10dp"></View>

        <LinearLayout
            android:id="@+id/ll_resource"
            style="@style/activity_main_ll"
            android:layout_marginTop="@dimen/margin_1dp">

            <ImageView
                android:id="@+id/iv_resource"
                style="@style/activity_main_iv"
                android:background="@drawable/selector_resource" />

            <TextView
                android:id="@+id/tv_resource"
                style="@style/activity_main_tv"
                android:text="@string/main_tv5" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_setting"
            style="@style/activity_main_ll"
            android:layout_marginTop="@dimen/margin_1dp">

            <ImageView
                android:id="@+id/iv_setting"
                style="@style/activity_main_iv"
                android:background="@drawable/selector_setting" />

            <TextView
                android:id="@+id/tv_setting"
                style="@style/activity_main_tv"
                android:text="@string/main_tv6" />
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.DrawerLayout>